# alpha_synthesis

./: README.md  pyproject.toml
docs/: backtest_report.html
src/backtest/: engine.py
src/dashboards/: app.py
src/data_ingestion/: pipeline.py
src/database/: schema.sql
src/features/: nlp_processor.py
src/models/: train.py
tests/: .gitignore  conftest.py  structural_schema_validation.sql  test_backtest.py  test_data_leakage.py  test_models.py  test_nlp_processor.py
